--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "phaser": "^3.55.2",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "uniq": "^1.0.1"
   }
 }
