--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mathple",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +13,6 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "phaser": "^3.55.2",
-    "socket.io": "^4.4.1",
-    "uniq": "^1.0.1"
+    "socket.io": "^4.4.1"
   }
 }
